static/styles/main.css
body {
  background-color: black;
  color: Crimson;
  text-align: center;
  background-image: url("../assets/images/DawnOfThorns.jpg");
  font-family: 'Niconne', cursive;
  font-size: large;
  background-repeat: no-repeat;
}
a {
  color: Crimson;
  margin: 15px;
}
div {
  margin: 0px auto;
}
p {
  margin: 30px auto;
}
input{
  margin: 2px auto;
}
textarea{
    margin: 2px auto;
}
.readable {
  background-color: silver;
}
.container-fluid {
  height: 90vh;
  padding-left: 0px;
  padding-right: 0px;
  margin: 0px;
  padding: 0px;
}
#Gamemain {
  height: 90%;
  overflow: hidden;
}

#Maincanvas{
  object-fit: scale-down;
  display: inline-block;
}
#Map{
  background-repeat: no-repeat;
  background-size:100% 100%;
}
#Gameinfo {
  height: 2em;
  overflow: hidden;
}
#Navbar {
  background-color: Silver;
  height: 3%;
  overflow: hidden;
  padding: 1.5%;
  margin-top: 1.5%;
  margin-bottom: 1.5%;
}
.row {
  width: 100%;
  padding: 0px;
  margin: 0px;
  display: flex;
  flex-wrap: wrap;
}


.hvr-pulse {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-pulse-grow:hover,
.hvr-pulse-grow:focus,
.hvr-pulse-grow:active {
  transform: scale(1.1);
  }

.createPlanet {
  display: flex;
  flex-direction: column;
  align-items: flex-start
/* align-content: left; */
}
#Information{
  background-color: rgba(.5,.5,.5,.3);
}

.boardSquare{
  width: 100%;
  height: 2.5%;
}

.boardColumn{
  display: inline-block;
  width: 1.3%;
  height: 100%;
}

.green{
  background-color: green;
}

.red{
  background-color: red;
}

.grey{
  background-color: grey;
}
.blue{
  background-color: blue;
}
.yellow{
  background-color: yellow;
}
.purple{
  background-color: purple;
}
.circle {
  border-radius: 50%
}
.uptriangle.red{
  width: 0;
  height: 0;
  border-left: 50% solid transparent;
  border-right: 50% solid transparent;
  border-bottom: 100% solid red;
}
.uptriangle.blue{
  width: 0;
  height: 0;
  border-left: 50% solid transparent;
  border-right: 50% solid transparent;
  border-bottom: 100% solid blue;
}
.uptriangle.green{
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-bottom: 100px solid green;
}
.uptriangle.grey{
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-bottom: 100px solid grey;
}
.uptriangle.yellow{
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-bottom: 100px solid yellow;
}
.uptriangle.purple{
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-bottom: 100px solid purple;
}


.downtriangle.red {
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-top: 100px solid red;
}
.downtriangle.blue {
  width: 0px;
  height: 0;
  padding-left: 50% solid transparent;
  padding-right: 50% solid transparent;
  padding-top: 100% solid blue;
}
.downtriangle.green {
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-top: 100px solid green;
}
.downtriangle.yellow {
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-top: 100px solid yellow;
}
.downtriangle.grey {
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-top: 100px solid grey;
}
.downtriangle.purple {
  width: 0;
  height: 0;
  border-left: 50px solid transparent;
  border-right: 50px solid transparent;
  border-top: 100px solid purple;
}

